# hdme

./: .gitignore  Makefile  Makefile.in  README.rst  acb_mat_extras.h  bootstrap.sh  configure  configure.ac  derivatives.h  doc.tex  flint_compat.h  hdme.pc.in  hdme_data.h  hecke.h  hilbert.h  igusa.h  make_plots.py  modular.h  polynomials.h  siegel.h  theta.h  timing.h  verbose.h
acb_mat_extras/: acb_mat_get_real.c  acb_mat_set_arb_arb.c  arb_mat_congr_fmpz_mat.c  arb_mat_get_imag.c  arb_mat_is_minkowski_reduced.c  arb_mat_is_nonsymmetric.c  arb_mat_lambda.c  arb_mat_minkowki_reduce.c  arb_mat_not_minkowski_reduced.c  arb_mat_randtest_precise.c  arb_mat_randtest_sym_pos.c  arb_mat_randtest_sym_precise.c
data/: I2  I4  igusa_I10_autogen.c  mestre_cubic.c
debug/: generate_theta.gp  theta.gp
doc/: hdme_data.rst  hilbert.rst  igusa.rst  modular.rst  siegel.rst  theta.rst
examples/: 22-isogeny.c  933-isogeny.c  hecke.c
gp2c/: I6prime  clebsch_from_igusa.c  gp_poly_to_acb.sage  gp_poly_to_acb.sage.py  igusa_I2_autogen.c  igusa_I4_autogen.c  igusa_I6prime_autogen.c  igusa_R2_autogen.c  mestre_conic.c
hdme_data/: cardona.inc  hdme_data_evaluate_acb.c  hdme_data_evaluate_fmpq.c  hdme_data_get_string.c  hdme_data_read.c  hdme_data_vars_clear.c  hdme_data_vars_init.c  hdme_data_vars_set.c  hilbert.inc  humbert.inc  igusa.inc  mestre.inc
hecke/: hecke_action_all_monomials.c  hecke_all_isog_Q.c  hecke_basis_matrix.c  hecke_charpoly.c  hecke_charpoly_nextprec.c  hecke_charpoly_startprec.c  hecke_check_nb.c  hecke_clear.c  hecke_collect_T1.c  hecke_collect_T1_with_line.c  hecke_collect_hilbert.c  hecke_collect_hilbert_sym.c  hecke_collect_print_status.c  hecke_collect_siegel.c  hecke_collect_verbose_start.c  hecke_eigenvalue_eisenstein.c  hecke_eigenvalue_eisenstein_p.c  hecke_eigenvalues_eisenstein_2.c  hecke_eigenvalues_eisenstein_p2.c  hecke_has_integral_precision.c  hecke_image_matrix.c  hecke_init.c  hecke_integral_highprec.c  hecke_make_integral.c  hecke_normalize_entry.c  hecke_operator.c  hecke_print.c  hecke_select_basepts.c  hecke_set_I.c  hecke_set_I_fmpz.c  hecke_set_I_fmpz_hilbert.c  hecke_set_I_fmpz_with_lowprec.c  hecke_set_T1.c  hecke_set_entry.c  hecke_set_hilbert.c  hecke_set_hilbert_sym.c  hecke_set_siegel.c  hecke_set_t1t2.c  hecke_set_tau.c  hecke_slash.c  (+10 more)
hilbert/: cov_from_gundlach.c  fmpq_poly_evaluate_all_acb.c  gundlach_cov_from_igusa.c  gundlach_from_cov.c  gundlach_from_hilbert_param.c  gundlach_from_igusa.c  gundlach_get_mpoly.c  hilbert_R.c  hilbert_conjugate.c  hilbert_get_mpoly.c  hilbert_halfspace_randtest.c  hilbert_inverse.c  hilbert_is_fundamental.c  hilbert_is_totally_positive.c  hilbert_linear_combination.c  hilbert_map.c  hilbert_mat_map.c  hilbert_parametrize.c  hilbert_scalar_div.c  hilbert_scalar_mul.c  hilbert_sigma1.c  hilbert_sigma2.c  hilbert_splits.c  hilbert_star.c  hilbert_transform.c  hilbert_transform_randtest.c  humbert_AA1BB1B2.c  humbert_cov_from_AA1BB1B2.c  humbert_get_mpoly.c  humbert_igusa_from_AA1BB1B2.c  humbert_parametrize.c  humbert_vars_clear.c  humbert_vars_init.c  humbert_vars_set.c  igusa_from_gundlach.c  igusa_from_gundlach_fmpz.c
igusa/: cardona.c  cardona_conic.c  cardona_cubic.c  cov_adjust_weights.c  cov_all_exps.c  cov_base_exps.c  cov_distinct.c  cov_divexact_fmpz.c  cov_divexact_fmpz_si.c  cov_divisible_fmpz.c  cov_eval_all_monomials.c  cov_eval_base_monomials.c  cov_factors.c  cov_find_rescaling.c  cov_from_IC.c  cov_from_IC_fmpz.c  cov_from_curve.c  cov_from_curve_fmpz.c  cov_from_h.c  cov_from_igusa.c  cov_from_igusa_fmpz.c  cov_from_theta2.c  cov_height.c  cov_is_g2_curve.c  cov_is_g2_curve_fmpz.c  cov_min_weight_combination.c  cov_monomial.c  cov_monomial_degrees.c  cov_monomial_exps.c  cov_mpoly_ctx_clear.c  cov_mpoly_ctx_init.c  cov_mpoly_eval.c  cov_mpoly_eval_fmpz.c  cov_mpoly_print.c  cov_nb_base_monomials.c  cov_nb_monomials.c  cov_no_rescale_to_one.c  cov_normalize.c  cov_normalize_fmpq_wt1.c  cov_normalize_fmpz.c  (+99 more)
modular/: alt_2step_all_isog_Q.c  alt_2step_factors.c  alt_2step_line.c  alt_2step_modeq_with_line.c  alt_2step_select_isog.c  hilbert_all_isog_Fp.c  hilbert_all_isog_Q.c  hilbert_coset.c  hilbert_isog_monomials_Fp.c  hilbert_isog_monomials_Q.c  hilbert_modeq_coeff_Q.c  hilbert_modeq_cov.c  hilbert_modeq_eval.c  hilbert_modeq_eval_split.c  hilbert_modeq_gundlach_den.c  hilbert_modeq_gundlach_eval_Fp.c  hilbert_modeq_gundlach_eval_Q.c  hilbert_modeq_gundlach_exps.c  hilbert_modeq_gundlach_fmpq_rescale.c  hilbert_modeq_gundlach_num.c  hilbert_modeq_gundlach_rescale.c  hilbert_modeq_gundlach_round.c  hilbert_modeq_gundlach_scalar.c  hilbert_modeq_gundlach_simplify.c  hilbert_modeq_height.c  hilbert_modeq_igusa_C.c  hilbert_modeq_igusa_eval_Fp.c  hilbert_modeq_igusa_eval_Q.c  hilbert_modeq_nonsym_gundlach_eval_Q.c  hilbert_modeq_nonsym_gundlach_num.c  hilbert_modeq_nonsym_gundlach_rescale.c  hilbert_modeq_nonsym_gundlach_scalar.c  hilbert_modeq_nonsym_igusa_C.c  hilbert_modeq_nonsym_igusa_eval_Fp.c  hilbert_modeq_nonsym_igusa_eval_Q.c  hilbert_modeq_poly_Q.c  hilbert_modeq_scalar.c  hilbert_modeq_startprec.c  hilbert_modeq_sym_igusa_C.c  hilbert_modeq_sym_igusa_Q.C  (+95 more)
modular_old/: hilbert_modeq_gundlach_eval_Q.c  hilbert_modeq_gundlach_exps.c  hilbert_modeq_gundlach_num.c  hilbert_modeq_igusa_C.c  hilbert_modeq_igusa_eval_Fp.c  hilbert_modeq_nextprec.c  hilbert_modeq_nonsym_gundlach_den.c  hilbert_modeq_nonsym_gundlach_eval_Fp.c  hilbert_modeq_nonsym_gundlach_eval_Q.c  hilbert_modeq_nonsym_igusa_C.c  hilbert_modeq_nonsym_igusa_eval_Fp.c  hilbert_modeq_nonsym_igusa_eval_Q.c  hilbert_modeq_startprec.c  hilbert_modeq_theta2.c  hilbert_modeq_theta2_star.c  modeq_cov.c  modeq_height_fmpq.c  modeq_isog_invariants_Fp.c  modeq_isog_invariants_nf.c  modeq_round.c  siegel_modeq_2step_isog_invariants_Q.c  siegel_modeq_den.c  siegel_modeq_eval_C.c  siegel_modeq_exps.c  siegel_modeq_isog_invariants_Q.c  siegel_modeq_scalar.c  siegel_modeq_startprec_fmpq.c  siegel_modeq_startprec_fmpz.c  siegel_modeq_theta2.c
polynomials/: acb_poly_product_tree_1.c  acb_poly_product_tree_2.c  acb_poly_rationalize.c  (+13 more)
(+543 files in other folders)
